--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -11,11 +16,13 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.20.17",
     "@types/react": "^16.14.11",
+    "@types/react-calendar": "^3.4.3",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.18",
     "@types/react-responsive": "^8.0.3",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-responsive": "^9.0.0-beta.3",
